@@ -1,4 +1,6 @@
-97323c7 (HEAD -> main, origin/main, origin/HEAD) Finished Homework-5
+1567c6e (HEAD -> main, origin/main, origin/HEAD) Fix Explorer Double Jump bug
+bd821dd Added CHANGELOG
+97323c7 Finished Homework-5
 8b405ce Add all required features
 3bcdf77 Added Trainer List
 7b6fc6f Added Battle Checks for all Characters
